8129549: G1: Make sure the concurrent thread does not mix its logging with the STW pauses

Reviewed-by: pliden, tschatzl